# pmm

./: .gitignore  AUTHORS  DEVELOPERS  LAST  Makefile.am  README  annotated.html  bootstrap  cblas__dgemm_8c.html  cblas__dgemm_8c_source.html  cblas__dgemm__stripe_8c.html  cblas__dgemm__stripe_8c_source.html  classes.html  config_8h.html  config_8h_source.html  configure.ac  dgemm2_8c.html  dgemm2_8c_source.html  dgemm3_8c.html  dgemm3_8c_source.html  dgemm_8c.html  dgemm_8c_source.html  dir_0fb11702ac62e8f84e13b3f18f27f149.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_195deb5a0ed0a222acabe629c3910d30.html  dir_23f25a75f7f2ff41f0d33382567e0327.html  dir_2ee3f44194195b3bdd09669522496088.html  dir_3692609c4d7ff190c61e8e437baa2ed7.html  dir_4f486e2d0bb230785bc7ce2683dc976d.html  dir_50eb76ef0609a6e0efb77579d88c78e2.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7529878b64b9c02e42cc659f9a51715a.html  dir_7e408581e3e40a807222232ecaf6e8f3.html  dir_7ecdcbf6baec8836eba89922788ec8b0.html  dir_827889db5c2c55dcc85efc3ea9e4ef08.html  dir_9015ef18b3b972469a80b725a69e94b7.html  dir_98c65740041aae3a937e9568a1dc8386.html  dir_be1b0e58f7265d73e0f457d792a8e1b1.html  dir_c43b4ae48f2c6355584425d78eb03c70.html  dir_d4e57b6d83411140e1cfe5d931216195.html  (+358 more)
doc/: Doxyfile.in  Makefile.am  fdl-1.3.tex  manual.tex  moving_on_from_octave.txt  structures_and_xml.txt
doc/gbbe/: Makefile.am  bisect.gnuplot
doc/mk/: Makefile.doc.am  README
etc/: Makefile.am  pmmd.conf.sh.in
latex/: annotated.tex  cblas__dgemm_8c.tex  cblas__dgemm__stripe_8c.tex  config_8h.tex  dgemm2_8c.tex  dgemm3_8c.tex  dgemm_8c.tex  dir_0fb11702ac62e8f84e13b3f18f27f149.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_50eb76ef0609a6e0efb77579d88c78e2.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_7529878b64b9c02e42cc659f9a51715a.tex  dir_7e408581e3e40a807222232ecaf6e8f3.tex  dir_7ecdcbf6baec8836eba89922788ec8b0.tex  dir_827889db5c2c55dcc85efc3ea9e4ef08.tex  dir_9015ef18b3b972469a80b725a69e94b7.tex  dir_c43b4ae48f2c6355584425d78eb03c70.tex  dir_e3a4aa6ae53c85312025264fe419cff9.tex  dir_face8115e63cddd53256f1f9bc27a52e.tex  doxygen.sty  dpotrf_8c.tex  dsyrk_8c.tex  example_8c.tex  executor__test_8c.tex  files.tex  gnuplot__i_8c.tex  gnuplot__i_8h.tex  index.tex  install_2share_2pmm_2pmm__griddatan_8m.tex  mainpage_8dox.tex  octave__test_8c.tex  pmm__argparser_8c.tex  pmm__argparser_8h.tex  pmm__cfgparser_8c.tex  pmm__cfgparser_8h.tex  pmm__comp_8c.tex  pmm__cond_8c.tex  pmm__cond_8h.tex  pmm__data_8c.tex  pmm__executor_8c.tex  (+49 more)
m4/: ax_check_gnu_make.m4  ax_pthread.m4
routines/: Makefile.am
routines/cblas/: Makefile.am  cblas_dgemm.c  cblas_dgemm_stripe.c
routines/example/: Makefile.am  example.c
routines/gotoblas2/: Makefile.am  gotoblas2_dgemm.c
routines/gsl/: Makefile.am
routines/gsl/blas/: Makefile.am  dgemm.c  dgemm2.c  dgemm3.c  dsyrk.c
routines/lapack/: Makefile.am
routines/lapack/double/: Makefile.am  dpotrf.c
routines/sim/: dgemm_4096_gpu_cpu_data.csv  dgemm_sim_cpu.sh
routines/sim/ben/: Makefile.am  dgemm_ben_5000_icc_mkl.pl  hoja_dgemm_5000_icc_mkl.csv
routines/sim/ben/data/: Makefile.am  hoja.ods  hoja_ben_orig.csv
routines/sim/chps/: Makefile.am  dgemm_sim.pl  dgemm_sim_gpu.sh
routines/sim/chps/data/: alexsandar_gpu_cpu_performance_figures.xlsx
routines/sim/data/: Makefile.am  alexsandar_gpu_cpu_performance_figures.ods
search/: all_5f.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_78.js  all_7a.js  classes_5f.js  classes_63.js  classes_70.js  defines_5f.js  defines_61.js  defines_65.js  defines_67.js  defines_68.js  defines_6c.js  defines_6d.js  defines_6e.js  defines_70.js  defines_73.js  defines_74.js  defines_76.js  defines_78.js  enums_70.js  (+57 more)
src/: Makefile.am  gnuplot_i.c  gnuplot_i.h  pmm_argparser.c  pmm_argparser.h  pmm_cfgparser.c  pmm_cfgparser.h  pmm_comp.c  pmm_cond.c  pmm_cond.h  pmm_data.c  pmm_data.h  pmm_executor.c  pmm_executor.h  pmm_gbbp.c  pmm_griddatan.m  pmm_interval.c  pmm_interval.h  pmm_load.c  pmm_load.h  pmm_loadmonitor.c  pmm_loadmonitor.h  pmm_log.h  pmm_main.c  pmm_model.c  pmm_model.h  pmm_muparse.cc  pmm_muparse.h  pmm_octave.cc  pmm_octave.h  pmm_param.c  pmm_param.h  pmm_scheduler.c  pmm_scheduler.h  pmm_selector.c  pmm_selector.h  pmm_util.c  pmm_util.h  pmm_view.c
test/: Makefile.am  executor_test.c  octave_test.c  test_cfgparser.c  timer_test.c
tools/: gcccpuopt
